[CSS] Make ::part(foo)::placeholder work.

This copies the ::slotted::placeholder approach and adds a
StyleResolver::MatchPseudoPartRulesForUAHost.

This also adds a reftest due to the fact that getComputedStyle does
not work with "::placeholder" - https://crbug.com/922431. It leaves the
old test in place because other browsers may support it and the hopefully
blink will in the future.

Bug: 922431
Change-Id: Iec4d9b279cf1f82dbdcbcc69dcac873678943882
Reviewed-on: https://chromium-review.googlesource.com/c/1415066
Reviewed-by: Rune Lillesveen <futhark@chromium.org>
Commit-Queue: Fergal Daly <fergal@chromium.org>
Cr-Commit-Position: refs/heads/master@{#623885}
Former-commit-id: cbe3bb5ff15b5ce1b6b1392fdc786087eaedb47a